--- a/plot_compare/config.yaml
+++ b/plot_compare/config.yaml
@@ -25,12 +25,17 @@ manual_offset_s: -6.2 # Ignored if auto_align is true
 
 # Plot dimensions
 plot_size: [12, 7.5]
+plot_title: "Title of the Plot"
+axis_labels:
+  x: "Time [s]"
+  y: "Temperature [°C]"
 
-# Font sizes
+# Font sizes for different elements
 font_sizes:
-  title: 14
-  legend: 10
-  axis: 12
+  title: 16      # Title font size
+  legend: 12     # Legend font size
+  axis: 14       # Axis labels font size
+  ticks: 12      # Tick labels font size
 
 # Columns to plot (indices, excluding time/sample column)
 columns_to_plot: []
