--- a/plot_single/config.yaml
+++ b/plot_single/config.yaml
@@ -17,12 +17,17 @@ header_cleanup:
 
 # Plot dimensions (width, height)
 plot_size: [12, 7.5]
+plot_title: "Title of the Plot"
+axis_labels:
+  x: "Time [s]"
+  y: "Temperature [°C]"
 
 # Font sizes for different elements
 font_sizes:
-  title: 14      # Title font size
-  legend: 10     # Legend font size
-  axis: 12       # Axis labels font size
+  title: 16      # Title font size
+  legend: 12     # Legend font size
+  axis: 14       # Axis labels font size
+  ticks: 12      # Tick labels font size
 
 # Indices of columns to plot (excluding time column) = [1, 3, 5] would plot the 2nd, 4th, and 6th columns
 # Leave empty or omit to plot all available columns = []
