--- a/plot_single/plot_single_sampled/config.yaml
+++ b/plot_single/plot_single_sampled/config.yaml
@@ -15,26 +15,36 @@ header_cleanup:
   - "Ave. (C)"
   - "(C)"
 
-# Plot dimensions (width, height)
-plot_size: [12, 7.5]
-plot_title: "Title of the Plot"
-axis_labels:
-  x: "Time [s]"
-  y: "Temperature [°C]"
-
-# Font sizes for different elements
-font_sizes:
-  title: 16      # Title font size
-  legend: 12     # Legend font size
-  axis: 14       # Axis labels font size
-  ticks: 12      # Tick labels font size
-
 # Indices of columns to plot (excluding time column) = [1, 3, 5] would plot the 2nd, 4th, and 6th columns
 # Leave empty or omit to plot all available columns = []
 columns_to_plot: [1,3]
 
 # Sampling rate in milliseconds
 sampling_rate_ms: 100
+
+# Plot formatting options (default settings)
+plot_format:
+  size:
+    width: 12
+    height: 7.5
+  font_sizes:
+    axis: 14
+    title: 16
+    legend: 12
+    ticks: 12
+  grid:
+    major:
+      color: "#00000000"
+      linestyle: ":"
+      linewidth: 0.8
+    minor:
+      color: "#A8A8A8C8"
+      linestyle: ":"
+      linewidth: 0.5
+  axis_labels:
+    x: "Time [s]"
+    y: "Temperature [°C]"
+  plot_title: "Title of the Plot"
 
 # Time window in seconds [start, end]
 # Leave empty or omit to plot full range
@@ -47,4 +57,5 @@ time_window: []
 # Supports jpeg and pdf
 # Specify one or multiple formats like this: ["jpeg"] or ["jpeg", "pdf"]
 # If the plot shall not be safed, use an empty list: []
-save_formats: ["jpeg", "pdf"]
+save_formats: ["jpeg"]
+
