--- a/plot_single/plot_template/config.yaml
+++ b/plot_single/plot_template/config.yaml
@@ -1,6 +1,6 @@
 # Path to the input CSV file
 # Option 1: Specify a single file
-# input_file: input/plot_single.csv
+input_file: input/NRF52_V1.0_Cl_12pF_L_mod.csv
 
 # Option 2: Specify multiple files
 # input_files:
@@ -12,15 +12,12 @@
 
 # Header cleanup rules (strings to remove from column names)
 header_cleanup:
-  - "Ave. (C)"
-  - "(C)"
+  - "[Mhz]"
+  - "[dBm]"
 
 # Indices of columns to plot (excluding time column) = [1, 3, 5] would plot the 2nd, 4th, and 6th columns
 # Leave empty or omit to plot all available columns = []
-columns_to_plot: [1,3]
-
-# Sampling rate in milliseconds
-sampling_rate_ms: 100
+columns_to_plot: []
 
 # Plot formatting options (default settings)
 plot_format:
@@ -42,20 +39,24 @@ plot_format:
       linestyle: ":"
       linewidth: 0.5
   axis_labels:
-    x: "Time [s]"
-    y: "Temperature [°C]"
-  plot_title: "Title of the Plot"
+    x: "Frequency [Hz]"
+    y: "Amplitude [dBm]"
+  plot_title: "Amplitude vs Frequency"
 
-# Time window in seconds [start, end]
+# window for x axis [start, end]
 # Leave empty or omit to plot full range
-time_window: []
+x_window: [248,338]
 
 # Output directory (optional — defaults to "output/")
 # output_dir: output
 
-# Output formats to save the plot
-# Supports jpeg and pdf
-# Specify one or multiple formats like this: ["jpeg"] or ["jpeg", "pdf"]
-# If the plot shall not be safed, use an empty list: []
-save_formats: ["jpeg"]
-
+# save_formats: 
+# image formats to save, supported formats include: "jpeg", "png", "pdf", "svg"
+# data formats to save, supported formats include: "csv", "xlsx"
+save_formats:
+  image:
+    - "jpeg"
+    - "pdf"
+  data:
+    # - "csv"
+    # - "xlsx"
